2004-04-10  Martin Baulig  <martin@ximian.com>
	* arch/: Imported Binutils 2.14.

svn path=/trunk/debugger/; revision=25278

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-10  Martin Baulig  <martin@ximian.com>
+
+	* arch/: Imported Binutils 2.14.
+
 2004-04-09  Martin Baulig  <martin@ximian.com>
 
 	* backends/server/library.c: Put this back.
