--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-04-13  Martin Baulig  <martin@ximian.com>
 
+	* backends/server/server.h (mono_debugger_server_get_target_info):
+	Added `guint32 *is_bigendian'.
+
+2004-04-13  Martin Baulig  <martin@ximian.com>
+
 	* arch/Bfd.cs: Get the name of the target on startup, added
 	PowerPC support.
 
