--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-04-14  Martin Baulig  <martin@ximian.com>
 
+	* frontends/command-line/: Started working on a new command line
+	interface.
+
+	* frontends/scripting/Parser.jay: Removed.
+	* frontends/scripting/Tokenizer.cs: Removed.
+
+2004-04-14  Martin Baulig  <martin@ximian.com>
+
 	The debugger is unstable at the moment, please use the latest release. 
 
 2004-04-13  Martin Baulig  <martin@ximian.com>
