2004-04-20  Miguel de Icaza  <miguel@ximian.com>
	* frontends/command-line/Main.cs: Add alias for "b" to mean "break"

	* frontends/scripting/Command.cs: Do not try to resolve if we have
	no current process, it leads to a crash.

	(QuitCommand): Derive from CL.Command, so we do not require a
	process to debug to quit.

svn path=/trunk/debugger/; revision=25711

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,12 @@
 2004-04-20  Miguel de Icaza  <miguel@ximian.com>
 
+	* frontends/command-line/Main.cs: Add alias for "b" to mean "break"
+
 	* frontends/scripting/Command.cs: Do not try to resolve if we have
 	no current process, it leads to a crash.
+
+	(QuitCommand): Derive from CL.Command, so we do not require a
+	process to debug to quit.
 
 2004-04-16  Peter Williams  <peter@newton.cx>
 
