--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-04-25  Martin Baulig  <martin@ximian.com>
+
+	* arch/Bfd.cs: Improved support for libraries.
+
+	* arch/DwarfReader.cs: Allow reading a library which is not yet
+	loaded in memory; ie. read the line number table, but do
+	relocations later.
+
 2004-04-23  Martin Baulig  <martin@ximian.com>
 
 	* classes/Module.cs (Module.RegisterLoadHandler): Moved here from
