--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-26  Martin Baulig  <martin@ximian.com>
+
+	* classes/ProcessStart.cs: Don't make this class abstract.
+
 2004-04-25  Martin Baulig  <martin@ximian.com>
 
 	* arch/Bfd.cs: Improved support for libraries.
