Added entry for 0.6.
svn path=/trunk/debugger/; revision=26268

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+March 16th, 2003 - Martin Baulig
+--------------------------------
+
+Released version 0.6 "Atlanta" of the Mono Debugger :-)
+
+This was during the week where we all met in Boston and it's also the
+first release which working in MonoDevelop.
+
 December 9th, 2003 - Martin Baulig
 ----------------------------------
 
