This is Wilmington, North Carolina.
svn path=/trunk/debugger/; revision=26272

--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,8 @@ Documentation won't make it into this release, but will be in MonkeyGuide
 shortly after it.  I'm doing two weeks of vacations, so I just want to
 get the release out before leaving.
 
+Btw. this is Wilmington, North Carolina.
+
 March 16th, 2004 - Martin Baulig
 --------------------------------
 
