--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-02  Martin Baulig  <martin@ximian.com>
+
+	Released version 0.8 "Wrightsville Beach" of the Mono Debugger :-)
+
 2004-06-01  Martin Baulig  <martin@ximian.com>
 
 	* frontends/command-line/GnuReadline.cs
