--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-06-03  Martin Baulig  <martin@ximian.com>
 
+	* backends/mono-csharp/MonoFunctionType.cs
+	(MonoFunctionType.Invoke): Copy register variables onto the heap.
+
+2004-06-03  Martin Baulig  <martin@ximian.com>
+
 	* test/TestInvocation.cs: New file.
 
 	* test/mono-debugger.tests/TestInvocation.exp: New test.
