--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-06-03  Martin Baulig  <martin@ximian.com>
 
+	* frontends/scripting/ScriptingContext.cs
+	(ScriptingContext.CurrentFrame): Removed the setter.
+	(ScriptingContext.CurrentFrameIndex): New property.
+
+2004-06-03  Martin Baulig  <martin@ximian.com>
+
 	* backends/mono-csharp/MonoFunctionType.cs
 	(MonoFunctionType.Invoke): Copy register variables onto the heap.
 
