--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-06-12  Martin Baulig  <martin@ximian.com>
 
+	* configure.in: Bumped version number to 0.9.
+
+2004-06-12  Martin Baulig  <martin@ximian.com>
+
 	* classes/ThreadGroup.cs (Global, Main): New static public
 	properties.  Initialize the "global" and "main" thread group in
 	our static .ctor.
