--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-06-17  Martin Baulig  <martin@ximian.com>
 
+	* frontends/scripting/Expression.cs (NumberExpression): Derive
+	from PointerExpression.
+	(PointerDereferenceExpression.EvaluateAddress): Removed the
+	NumberExpression hack.
+
+2004-06-17  Martin Baulig  <martin@ximian.com>
+
 	* frontends/command-line/CL.cs
 	(Command.Repeat): New public virtual method.
 	(Engine.Repeat): New public method.
