--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-06-17  Martin Baulig  <martin@ximian.com>
 
+	* frontends/scripting/Command.cs (StartCommand): Reenable this.
+
+2004-06-17  Martin Baulig  <martin@ximian.com>
+
 	* frontends/scripting/Command.cs
 	(AboutCommand): Added `about' command.
 
